// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image renders <img> 1`] = `
<img
  loading="lazy"
  src="src"
/>
`;

exports[`Image renders childImageSharp fixed 1`] = `
<div
  className=" gatsby-image-wrapper"
  style={
    Object {
      "display": "inline-block",
      "height": 250,
      "overflow": "hidden",
      "position": "relative",
      "width": 250,
    }
  }
>
  <picture>
    <source
      srcSet="srcSet"
    />
    <img
      alt=""
      height={250}
      loading="lazy"
      onLoad={[Function]}
      src="src"
      srcSet="srcSet"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "objectFit": "cover",
          "objectPosition": "center",
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transition": "opacity 500ms",
          "width": "100%",
        }
      }
      width={250}
    />
  </picture>
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "<picture><source srcset=\\"srcSet\\" /><img loading=\\"lazy\\" width=\\"250\\" height=\\"250\\" srcset=\\"srcSet\\" src=\\"src\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
      }
    }
  />
</div>
`;

exports[`Image renders childImageSharp fluid 1`] = `
<div
  className=" gatsby-image-wrapper"
  style={
    Object {
      "maxHeight": null,
      "maxWidth": null,
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <div
    aria-hidden={true}
    style={
      Object {
        "paddingBottom": "100%",
        "width": "100%",
      }
    }
  />
  <picture>
    <source
      sizes="(max-width: 250px) 100vw, 250px"
      srcSet="srcSet"
    />
    <img
      alt=""
      loading="lazy"
      onLoad={[Function]}
      sizes="(max-width: 250px) 100vw, 250px"
      src="src"
      srcSet="srcSet"
      style={
        Object {
          "height": "100%",
          "left": 0,
          "objectFit": "cover",
          "objectPosition": "center",
          "opacity": 0,
          "position": "absolute",
          "top": 0,
          "transition": "opacity 500ms",
          "width": "100%",
        }
      }
    />
  </picture>
  <noscript
    dangerouslySetInnerHTML={
      Object {
        "__html": "<picture><source srcset=\\"srcSet\\" sizes=\\"(max-width: 250px) 100vw, 250px\\" /><img loading=\\"lazy\\" sizes=\\"(max-width: 250px) 100vw, 250px\\" srcset=\\"srcSet\\" src=\\"src\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
      }
    }
  />
</div>
`;
